--- a/ServerPorject/safety/src/main/resources/config.properties
+++ b/ServerPorject/safety/src/main/resources/config.properties
@@ -24,9 +24,12 @@
 
 # \u6570\u636E\u5E93\u914D\u7F6E
 jdbc.driverClass = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://127.0.0.1:3306/safety
-jdbc.user = safety
-jdbc.password = safety
+#jdbc.url = jdbc:mysql://127.0.0.1:3306/safety
+jdbc.url = jdbc:mysql://mysql:3306/safety
+#jdbc.user = safety
+jdbc.user = root
+#jdbc.password = safety
+jdbc.password = mysql1
 
 #c3p0
 jdbc.maxPoolSize=50
